--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.pattern {
+    filter: invert(100%);
+    position: absolute;
+    background: url(/img/pattern.png) repeat;
+    background-size: 25px;
+    top: 0;
+}
