Feat/start articles feature (#1)
* chore: init articles feature

* improv: add article read from file

* improv: add math symbols

* improv: add last articles section

* improv: add list elements

* feat: add tower of hanoi article

* fix: fix build

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.pattern {
+    filter: invert(100%);
+    position: absolute;
+    background: url(/img/pattern.png) repeat;
+    background-size: 25px;
+    top: 0;
+}
+
+.katex-display {
+    color: white;
+}
